[workspace]
resolver = "2"
members = [
    "device-driver",
    "compiler/dd-cli",
    "compiler/dd-codegen",
    "compiler/dd-common",
    "compiler/dd-core",
    "compiler/dd-diagnostics",
    "compiler/dd-lexer",
    "compiler/dd-lir",
    "compiler/dd-macros",
    "compiler/dd-mir",
    "compiler/dd-parser",
    "compiler/dd-wasm",
    "tests/ui",
]

exclude = ["website"]

package.version = "1.0.7"
package.authors = ["Dion Dokter <dev@diondokter.nl>"]
package.license = "MIT OR Apache-2.0"
package.homepage = "https://device-driver.com"
package.repository = "https://github.com/diondokter/device-driver"
package.edition = "2024"
package.rust-version = "1.88"

[workspace.dependencies]
device-driver-codegen = { path = "compiler/dd-codegen", version = "=1.0.7" }
device-driver-common = { path = "compiler/dd-common", version = "=1.0.7" }
device-driver-core = { path = "compiler/dd-core", version = "=1.0.7" }
device-driver-diagnostics = { path = "compiler/dd-diagnostics", version = "=1.0.7" }
device-driver-lexer = { path = "compiler/dd-lexer", version = "=1.0.7" }
device-driver-lir = { path = "compiler/dd-lir", version = "=1.0.7" }
device-driver-macros = { path = "compiler/dd-macros", version = "=1.0.7" }
device-driver-mir = { path = "compiler/dd-mir", version = "=1.0.7" }
device-driver-parser = { path = "compiler/dd-parser", version = "=1.0.7" }

itertools = "0.14.0"
convert_case = "0.10.0"
clap = { version = "4.5.57", features = ["derive"] }
bitvec = { version = "1.0.1", default-features = false }
syn = "2.0.114"
pretty_assertions = "1.4.1"
chumsky = { version = "0.12.0", default-features = false, features = ["std"] }

[profile.release]
lto = true
