[workspace]
resolver = "2"
members = [
    "device-driver",
    "compiler/dd-cli",
    "compiler/dd-codegen",
    "compiler/dd-common",
    "compiler/dd-core",
    "compiler/dd-diagnostics",
    "compiler/dd-lexer",
    "compiler/dd-lir",
    "compiler/dd-macros",
    "compiler/dd-mir",
    "compiler/dd-parser",
    "compiler/dd-wasm",
    "fuzz",
    "tests/ui",
]

exclude = ["website"]

package.version = "2.0.0-alpha.1"
package.authors = ["Dion Dokter <dev@diondokter.nl>"]
package.license = "MIT OR Apache-2.0"
package.homepage = "https://device-driver.com"
package.repository = "https://github.com/diondokter/device-driver"
package.edition = "2024"
package.rust-version = "1.94"

[workspace.dependencies]
device-driver-codegen = { path = "compiler/dd-codegen", version = "=2.0.0-alpha.1" }
device-driver-common = { path = "compiler/dd-common", version = "=2.0.0-alpha.1" }
device-driver-core = { path = "compiler/dd-core", version = "=2.0.0-alpha.1" }
device-driver-diagnostics = { path = "compiler/dd-diagnostics", version = "=2.0.0-alpha.1" }
device-driver-lexer = { path = "compiler/dd-lexer", version = "=2.0.0-alpha.1" }
device-driver-lir = { path = "compiler/dd-lir", version = "=2.0.0-alpha.1" }
device-driver-macros = { path = "compiler/dd-macros", version = "=2.0.0-alpha.1" }
device-driver-mir = { path = "compiler/dd-mir", version = "=2.0.0-alpha.1" }
device-driver-parser = { path = "compiler/dd-parser", version = "=2.0.0-alpha.1" }

itertools = "0.14.0"
convert_case = "0.10.0"
clap = { version = "4.5.57", features = ["derive"] }
bitvec = { version = "1.0.1", default-features = false }
syn = "2.0.114"
pretty_assertions = "1.4.1"
chumsky = { version = "0.13.0", default-features = false, features = ["std"] }
arbitrary = { version = "1.4.2", features = ["derive"] }

[patch.crates-io]
# https://codeberg.org/zesterer/chumsky/pulls/986
chumsky = { git = "https://codeberg.org/diondokter/chumsky.git", rev = "ac7fe9b1eebad487679abafb0e0c4d1c082894d0" }
