[package]
name = "device-driver-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["device", "driver", "toolkit"]
categories = ["embedded", "hardware-support", "development-tools"]
description = "The command line tool for the device-driver toolkit"
readme = "README.md"
default-run = "device-driver-cli"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.20", features = ["derive"] }
device-driver-generation = { version = "=1.0.5", path = "../generation" }
miette = { version = "7.6.0", features = ["fancy", "syntect-highlighter"] }
syn = { version = "2.0" }
