[package]
name = "device-driver-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["device", "driver", "toolkit"]
categories = ["embedded", "hardware-support", "development-tools"]
description = "The command line compiler for the device-driver toolkit"
readme = "README.md"
default-run = "ddc"

[[bin]]
name = "ddc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.20", features = ["derive"] }
device-driver-compiler = { version = "=1.0.7", path = "../compiler" }
syn = { version = "2.0" }
