[package]
name = "device-driver-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["no_std", "device", "driver", "toolkit"]
categories = ["embedded", "hardware-support", "no-std::no-alloc", "no-std"]
description = "Compiler library for the `device-driver` crate"
readme = "README.md"

[dependencies]
convert_case = "0.10.0"
itertools = "0.14.0"
quote = "1.0.33"
bitvec = "1.0.1"
askama = { version = "0.15.0", default-features = false, features = ["derive", "alloc"] }
kdl = "6.5.0"
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.12"
strum = { version = "0.27.1", features = ["derive"] }

prettyplease = { version = "*", optional = true }
syn = { version = "2.0", features = ["extra-traits"], optional = true }
unicode-ident = "1.0.22"

[dev-dependencies]
pretty_assertions = "1.4.0"
indoc = "2.0.5"

[features]
default = ["prettyplease"]
prettyplease = ["dep:prettyplease", "dep:syn"]
