[package]
name = "device-driver-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
funty = { version = "2.0.0", default-features = false }
num_enum = { version = "0.7.1", default-features = false }
