[package]
name = "dd-manifest-tree"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
serde_json = { version = "1.0.128", optional = true }
yaml-rust2 = { version = "0.9.0", optional = true }
toml = { version = "0.8.19", optional = true }

[features]
default = ["json", "yaml", "toml"]
json = ["dep:serde_json"]
yaml = ["dep:yaml-rust2"]
toml = ["dep:toml"]
preserve_order = ["serde_json/preserve_order", "toml/preserve_order"]