[package]
name = "dd-manifest-tree"
version = "1.0.0-rc.1"
authors = ["Dion Dokter <diondokter@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/diondokter/device-driver"
repository = "https://github.com/diondokter/device-driver"
keywords = ["yaml", "json", "toml", "value"]
categories = ["parsing"]
description = "Crate to unify the 'Value' tree types of json, yaml and toml"
readme = "README.md"

[dependencies]
serde_json = { version = "1.0.128", features = ["preserve_order"], optional = true }
yaml-rust2 = { version = "0.9.0", optional = true }
toml = { version = "0.8.19", features = ["preserve_order"], optional = true }

[features]
default = ["json", "yaml", "toml"]
json = ["dep:serde_json"]
yaml = ["dep:yaml-rust2"]
toml = ["dep:toml"]
