[package]
name = "dd-manifest-tree"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["yaml", "json", "toml", "value"]
categories = ["parsing"]
description = "Crate to unify the 'Value' tree types of json, yaml and toml"
readme = "README.md"

[dependencies]
serde_json = { version = "1.0.128", features = ["preserve_order"], optional = true }
yaml-rust2 = { version = "0.9.0", optional = true }
toml = { version = "0.8.19", features = ["preserve_order"], optional = true }

[features]
default = ["json", "yaml", "toml"]
json = ["dep:serde_json"]
yaml = ["dep:yaml-rust2"]
toml = ["dep:toml"]
