[package]
name = "device-driver"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["no_std", "device", "driver", "toolkit"]
categories = ["embedded", "hardware-support", "no-std::no-alloc", "no-std"]
description = "A toolkit to write better device drivers, faster"
readme = "README.md"

[dependencies]
device-driver-macros = { workspace = true, optional = true }

embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
defmt = { version = "1.0.1", optional = true }

[dev-dependencies]
bitvec = { version = "1.0.1", default-features = false }
rand = "0.9"

[features]
default = ["macros"]
defmt = ["dep:defmt", "embedded-io/defmt"]

macros = ["dep:device-driver-macros"]
