[package]
name = "device-driver"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["no_std", "device", "driver", "toolkit"]
categories = ["embedded", "hardware-support", "no-std::no-alloc", "no-std"]
description = "A toolkit to write better device drivers, faster"
readme = "README.md"

[dependencies]
device-driver-macros = { workspace = true, optional = true }

embedded-io = { version = "0.7.1", optional = true }
embedded-io-async = { version = "0.7.0", optional = true }
defmt = { version = "1.0.1", optional = true }

[dev-dependencies]
bitvec.workspace = true
rand = "0.9"
# Enable embedded-io for tests
device-driver = { path = ".", features = ["embedded-io-07", "macros"] }

[features]
# Enable compiling your DDSL with a macro 
macros = ["dep:device-driver-macros"]

# Enable defmt Format impls for many types
defmt = ["dep:defmt", "embedded-io?/defmt", "embedded-io-async?/defmt"]
# Enable embedded-io 0.7 impls for buffer operations
embedded-io-07 = ["dep:embedded-io", "dep:embedded-io-async"]
