[package]
name = "device-driver-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
device-driver-core.workspace = true

arbitrary = { version = "1.4.2", features = ["derive"] }
libfuzzer-sys = "0.4"

[[bin]]
name = "compiler-text"
path = "fuzz_targets/compiler-text.rs"
test = false
doc = false
bench = false
