[package]
name = "device-driver-generation"
version = "0.7.0"
authors = ["Dion Dokter <diondokter@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/diondokter/device-driver"
repository = "https://github.com/diondokter/device-driver"
keywords = ["no_std", "device", "driver", "toolkit"]
categories = ["embedded", "hardware-support", "no-std::no-alloc", "no-std"]
description = "Code generation for the `device-driver` crate"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
convert_case = "0.6.0"
itertools = "0.13.0"
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0", features = ["extra-traits"] }
bitvec = "1.0.1"
dd-manifest-tree = { path = "../dd-manifest-tree", optional = true, features = ["preserve_order"] }

[dev-dependencies]
prettyplease = "0.2.15"
pretty_assertions = "1.4.0"
indoc = "2.0.5"

[features]
default = ["dsl", "json", "yaml", "toml"]
manifest = ["dep:dd-manifest-tree"]
dsl = []
json = ["manifest", "dd-manifest-tree/json"]
yaml = ["manifest", "dd-manifest-tree/yaml"]
toml = ["manifest", "dd-manifest-tree/toml"]
