[package]
name = "device-driver-generation"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["no_std", "device", "driver", "toolkit"]
categories = ["embedded", "hardware-support", "no-std::no-alloc", "no-std"]
description = "Code generation for the `device-driver` crate"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
convert_case = "0.6.0" # Out of date, but can't really update in a back-compat way. Fine though, no exploits known in this version
itertools = "0.14.0"
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0", features = ["extra-traits"] }
bitvec = "1.0.1"
dd-manifest-tree = { version = "1.0.0", path = "../dd-manifest-tree", optional = true, default-features = false }
askama = { version = "0.14.0", default-features = false, features = ["derive", "alloc"] }
kdl = "6.3.4"

[dev-dependencies]
pretty_assertions = "1.4.0"
indoc = "2.0.5"

[features]
default = ["dsl", "json", "yaml", "toml"]
manifest = ["dep:dd-manifest-tree"]
dsl = []
json = ["manifest", "dd-manifest-tree/json"]
yaml = ["manifest", "dd-manifest-tree/yaml"]
toml = ["manifest", "dd-manifest-tree/toml"]
