[package]
name = "device-driver-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["device", "driver", "toolkit"]
categories = ["embedded", "hardware-support", "development-tools"]
description = "The command line compiler for the device-driver toolkit"
readme = "README.md"
default-run = "ddc"

[[bin]]
name = "ddc"
path = "src/main.rs"

[dependencies]
device-driver-core.workspace = true
device-driver-diagnostics.workspace = true

miette.workspace = true

clap = { version = "4.5.20", features = ["derive"] }
