[package]
name = "device-driver-common"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
miette = "7.6.0"
convert_case = "0.10.0"
unicode-ident = "1.0.22"
