[package]
name = "device-driver-common"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
convert_case.workspace = true
chumsky.workspace = true

unicode-ident = "1.0.22"
