[package]
name = "device-driver-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["no_std", "device", "driver", "toolkit"]
categories = ["embedded", "hardware-support", "no-std::no-alloc", "no-std"]
description = "Compiler library for the `device-driver` crate"
readme = "README.md"

[dependencies]
device-driver-common.workspace = true
device-driver-diagnostics.workspace = true
device-driver-mir.workspace = true
device-driver-lir.workspace = true
device-driver-codegen.workspace = true

convert_case.workspace = true
itertools.workspace = true
miette.workspace = true
thiserror.workspace = true

quote = "1.0.33"

prettyplease = { version = "0.2.37", optional = true }
syn = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
indoc = "2.0.5"

[features]
default = ["prettyplease"]
prettyplease = ["dep:prettyplease", "dep:syn"]
