[package]
name = "device-driver-diagnostics"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
device-driver-common.workspace = true

miette.workspace = true
convert_case.workspace = true
itertools.workspace = true
thiserror.workspace = true

annotate-snippets = "0.12.11"

[dev-dependencies]
pretty_assertions.workspace = true
