[package]
name = "device-driver-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["no_std", "device", "driver", "toolkit"]
categories = ["embedded", "hardware-support", "no-std::no-alloc", "no-std"]
description = "Proc macro implementation for the `device-driver` crate"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
device-driver-core.workspace = true
device-driver-diagnostics.workspace = true

syn.workspace = true

proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
