[package]
name = "device-driver-mir"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
device-driver-common.workspace = true
device-driver-diagnostics.workspace = true

convert_case.workspace = true
itertools.workspace = true
miette.workspace = true
thiserror.workspace = true

kdl = "6.5.0"
