[package]
name = "device-driver-parser"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
device-driver-lexer.workspace = true
device-driver-common.workspace = true

chumsky = { version = "0.12.0", default-features = false, features = ["std"] }
