[package]
name = "wasm"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.101"
device-driver-compiler = { path = "../../compiler", features = ["prettyplease"] }

[patch.crates-io]
# https://github.com/zkat/miette/pull/448
miette = { git = "https://github.com/zkat/miette.git", rev = "6759d59f42797cbbf102690aaeb6c49f661d223b" }

[profile.release]
lto = true
